--- a/BuildingMyNewYearM.html
+++ b/BuildingMyNewYearM.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Mission</title>
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    
+    <div class="banner">
+      <p id="HNY"> Happy New Year</p>
+      <p id="NYP"> New Year Party Celebration</p>
+    </div>
 </body>
 </html>
