--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p id="OFF">65% OFF</p>
         <p id="ohd">OUR HOLIDAY DEALS ARE BETTER</p>
         <p id="AC">ALL CATEGORIES</p>
-        <img id="img2" src="/source/New Year Photo.png" alt="Happy New Year" />
+        <img id="img2" src="./source/New Year Photo.png" alt="Happy New Year" />
       </div>
       <div class="third">
         <p id="wmp">Welcome to midnight party</p>
