till bonus part

--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
         <img id="img2" src="./source/New Year Photo.png" alt="Happy New Year" />
       </div>
       <div class="third">
-        <p id="wmp">Welcome to midnight party</p>
-        <p id="sp">
-          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-          euismod.
-        </p>
-        <p><button id="jn">Join Now</button></p>
+        <div>
+          <p id="wmp">Welcome to midnight party</p>
+          <p id="sp">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <p><button id="jn">Join Now</button></p>
+        </div>
+        <div><img id="img3" src="./source/Group 70.png" alt="" /></div>
       </div>
       <div class="fourth">
         <p id="blk">
@@ -47,9 +50,32 @@
           <button id="bt2">Join Now</button>
         </p>
       </div>
-      <div>
-        
+      <div class="NBD">
+        <div id="div1">
+          <p id="NBO">NEW BEST OFFER</p>
+          <br />
+          <p id="CS">Coming Soon</p>
+          <br />
+          <p id="SP2">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div id="div2">
+          <img id="img4" src="./source/Ellipse 1.png" alt="Hurray!" />
+        </div>
+        <div id="div3">
+          <p id="year">2024</p>
+          <br />
+          <p id="sp3">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+          </p>
+          <br />
+          <img id="img5" src="./source/Group 96.png" alt="Happy New Year" />
+        </div>
       </div>
+      <div></div>
     </main>
     <footer></footer>
   </body>
