--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <div>
           <p id="wmp">Welcome to midnight party</p>
           <p id="sp">
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            We are organizing a midnight party for new year. Join us on the
+            party.
           </p>
           <p><button id="jn">Join Now</button></p>
         </div>
@@ -57,9 +56,7 @@
           <p id="CS">Coming Soon</p>
           <br />
           <p id="SP2">
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            We are offering some best deal for you. Checkout our products.
           </p>
         </div>
         <div id="div2">
@@ -68,15 +65,117 @@
         <div id="div3">
           <p id="year">2024</p>
           <br />
-          <p id="sp3">
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
-          </p>
+          <p id="sp3">Enjoy your new year with your friends and family.</p>
           <br />
           <img id="img5" src="./source/Group 96.png" alt="Happy New Year" />
         </div>
       </div>
-      <div></div>
+      <div class="div6">
+        <p class="div6-p1">WHAT IS FUNCTIONAL</p>
+        <p class="div6-p2"><span>HOLIDAYS</span> SALE 50%</p>
+        <p class="div6-p3">
+          Unleash the savings! Enjoy a sensational 50% off on our website-wide
+          sale. <br />
+          Dive into a world of discounts where every click leads to unbeatable
+          deals.Elevate your shopping experience with half-price bliss. <br />
+          Hurry, seize the moment, and let the savings spree begin! #SaleFrenzy
+          #ShopSmart
+        </p>
+        <div class="salePics">
+          <img class="salePics1" src="./source/Rectangle 1.png" alt="" />
+          <img class="salePics2" src="./source/Rectangle 2.png" alt="" />
+          <img class="salePics3" src="./source/Group 44.png" alt="" />
+          <img class="salePics4" src="./source/Group 75.png" alt="" />
+        </div>
+      </div>
+
+      <div class="div7">
+        <div>
+          <p id="tbg">THE BEST GIFTS</p>
+          <br />
+          <p id="OAP">Our Awesome Portfolio</p>
+          <br />
+          <p id="sp7">
+            Experience the epitome of digital excellence in our website
+            portfolio. Elevate your online presence with our sleek designs and
+            seamless functionality. Immerse your audience in a captivating
+            journey where aesthetics meet efficiency. Let us redefine your
+            digital identity, creating a website that's not just seen but
+            remembered.
+          </p>
+          <br />
+        </div>
+        <div id="table1">
+          <div>
+            <img src="./source/Rectangle 3.png" alt="" />
+          </div>
+          <div><img src="./source/Rectangle 4.png" alt="" /></div>
+          <div><img src="./source/Rectangle 5.png" alt="" /></div>
+        </div>
+        <div id="table1">
+          <div><img src="./source/Rectangle 6.png" alt="" /></div>
+          <div><img src="./source/Rectangle 7.png" alt="" /></div>
+          <div><img src="./source/Rectangle 8.png" alt="" /></div>
+        </div>
+      </div>
+      <div class="div8">
+        <img id="img8" src="./source/Group 61.png" alt="" />
+        <p id="sn">Subscribe Newsletter</p>
+        <p id="sp8">
+          Unlock exclusive content, stay updated with trends, and join a
+          community of innovators. Subscribe now for a personalized online
+          experience!
+        </p>
+        <input type="email" placeholder="user@email.com" /><button
+          type="submit"
+        >
+          Subscribe
+        </button>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <div id="address">
+          44, Big Building Roosevelt Street Beach Gardens Florida 33410
+        </div>
+        <div>
+          <div id="pw">
+            <img id="fimg" src="./source/Call.png" alt="" />
+            <p>+919178761033</p>
+          </div>
+          <div id="pw">
+            <img id="fimg" src="./source/Website.png" alt="" /><a
+              href="https://saad0003.github.io/BuildingMyNewYearM/"
+              ><p>www.mynewyearmission.com</p></a
+            >
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footer-two">
+        <div>
+          <a href="https://www.facebook.com/mkhsaad03"
+            ><img src="./source/Facebook.png" alt=""
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.instagram.com/mkhsaad03/"
+            ><img src="./source/Instagram.png" alt=""
+          /></a>
+        </div>
+        <div><img src="./source/Twitter.png" alt="" /></div>
+        <div>
+          <a
+            href="https://www.linkedin.com/in/md-kaisar-hossain-saad-a775551a5/"
+            ><img src="./source/Linkedin.png" alt=""
+          /></a>
+        </div>
+      </div>
+      <hr />
+      <div>
+        <div>2017, All Rights Reserved.</div>
+        <div><button type="submit">Unsubscribe</button></div>
+      </div>
+    </footer>
   </body>
 </html>
